# DBDuck

./: .bandit  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  test.db  udom.db
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
DBDuck/: UDOM.py  __init__.py  alembic_support.py  models.py
DBDuck/adapters/: __init__.py  _sqlalchemy_adapter.py  mssql_adapter.py  mysql_adapter.py  postgres_adapter.py  sqlite_adapter.py
DBDuck/cli/: __init__.py  main.py
DBDuck/core/: __init__.py  adapter_router.py  base_adapter.py  connection_manager.py  exceptions.py  schema.py  transaction.py
DBDuck/migrations/: __init__.py
DBDuck/migrations/sql/: README.md  __init__.py  env.py
DBDuck/udom/: __init__.py  async_udom.py  query_builder.py  udom.py
DBDuck/udom/adapters/: ai_adapter.py  base_adapter.py  graph_adapter.py  nosql_adapter.py  sql_adapter.py  vector_adapter.py
DBDuck/udom/adapters/sql/: base_sql_adapter.py  mariadb_adapter.py  (+3 more)
DBDuck/udom/models/: umodel.py  user_model.py
DBDuck/udom/uql/: uql_parser.py
DBDuck/udom/utils/: validator.py
DBDuck/utils/: __init__.py  logger.py
docs/: INITIALIZE.md  api_reference.rst  conf.py  index.rst  initialize.rst  installation.rst  migrations.rst  production_readiness.rst  query_builder.rst  requirements.txt
docs/_static/: custom.css
examples/: README.md  ex_mssql.py  example_dbduck_models.py  example_graph.py  example_mongo.py  example_mysql.py  example_psql.py  example_sqlite.py  v3.py
examples/dbs/mssql/: advanced.py  basic.py
examples/dbs/mysql/: advanced.py  basic.py
examples/dbs/postgres/: advanced.py  basic.py
examples/fastapi_dbduck_app/: main.py
examples/full_stack_dbduck_app/: .env  README.md  __init__.py  main.py  models.py
examples/full_stack_dbduck_app/api/: __init__.py  dependencies.py  routes.py
examples/full_stack_dbduck_app/core/: __init__.py  config.py
examples/full_stack_dbduck_app/db/: __init__.py  bootstrap.py
examples/full_stack_dbduck_app/schemas/: __init__.py  auth.py  customer.py  order.py  payment.py  product.py
examples/full_stack_dbduck_app/services/: __init__.py  auth.py  customers.py  dashboard.py  identity.py  jwt_tokens.py  orders.py  payment_gateway.py  products.py  razorpay.py  uql.py
examples/full_stack_dbduck_app/web/: __init__.py  router.py  views.py
examples/query_builder/: example_all_backends.py  example_all_sql_backends.py  example_model_relationships.py  example_sql_joins.py  example_umodel_query_builder.py
migrations/sql/: README.md  env.py
migrations/sql/versions/: 783d2b197e16_add_user_age.py  791382934bc9_init.py  a97441a98a45_add_user_age.py  c002369c8dc2_add_user_age.py  e19d54cb5dc5_add_user_age.py  f2acba2f2eb7_.py
tests/: nosql_inject.py  sql_inject.py  test_alembic_support.py  test_async_udom.py  test_cli.py  test_connection.py  test_dbduck_models_compat.py  test_error_messages.py  test_legacy_sql_adapter.py  test_mongodb_support.py  test_mysql_adapter.py  test_query_builder.py  test_router_and_validation.py  test_security_features.py  test_security_injection.py  test_sql_database_objects.py  test_transactions.py  test_umodel.py  test_umodel_sensitive_and_projection.py  test_vector_adapter.py
tests/integration/: README.md  test_mongo_integration.py  test_sql_backends_integration.py  test_sql_migrations_integration.py
udom/: udom.py
udom/adapters/: ai_adapter.py  base_adapter.py  nosql_adapter.py  sql_adapter.py  vector_adapter.py
udom/adapters/sql/: base_sql_adapter.py  mysql_adapter.py  postgres_adapter.py  sqlite_adapter.py
udom/models/: user_model.py
udom/utils/: validator.py
