[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DBDuck"
version = "0.1.0"
description = "Universal data object model for SQL, NoSQL, graph, vector, and AI databases."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "sqlalchemy>=2.0.25",
  "pymysql>=1.1.0",
  "psycopg2-binary>=2.9.9",
  "typing-extensions>=4.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]
all = [
  "pyodbc",
  "pymongo",
  "mongoengine",
  "redis",
  "boto3",
  "google-cloud-firestore",
  "neo4j",
  "neomodel",
  "rdflib",
  "pyTigerGraph",
  "cryptography",
  "psycopg2-binary",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["udom*", "DBDuck*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
