[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbduck"
version = "0.2.1"
description = "Universal Data Object Model - one API for every database"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Veeresh Hanni" }
]
keywords = ["database", "udom", "orm", "mongodb", "neo4j", "qdrant", "sqlalchemy"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Database :: Database Engines/Servers",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "sqlalchemy>=2.0",
  "bcrypt>=4.0"
]

[project.urls]
Homepage = "https://dbduck.org.in"
Repository = "https://github.com/Veeresh-Hanni/DBDuck"
Issues = "https://github.com/Veeresh-Hanni/DBDuck/issues"
Documentation = "https://dbduck.org.in"

[project.scripts]
dbduck = "DBDuck.cli.main:app"

[project.optional-dependencies]
mongo = ["pymongo>=4.0", "motor>=3.0"]
async = ["asyncpg>=0.29", "aiomysql>=0.2", "aiosqlite>=0.19", "motor>=3.0"]
vector = ["qdrant-client>=1.7"]
graph = ["neo4j>=5.0"]
mssql = ["pyodbc>=4.0"]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "bandit",
  "pip-audit",
  "black",
  "ruff"
]
all = [
  "pymongo>=4.0",
  "motor>=3.0",
  "asyncpg>=0.29",
  "aiomysql>=0.2",
  "aiosqlite>=0.19",
  "qdrant-client>=1.7",
  "neo4j>=5.0",
  "pyodbc>=4.0",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "bandit",
  "pip-audit",
  "black",
  "ruff"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["DBDuck*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.bandit]
exclude_dirs = [
  "tests",
  ".venv",
  "wslvenv"
]
skips = ["B101"]

